[metadata]
name = plotman
version = file: VERSION
author = Eric Altendorf
home-page = https://github.com/ericaltendorf/plotman
description = Chia plotting manager
long-description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license-file = LICENSE
python_requires = >=3.7
keywords = chia, blockchain, automation, process management
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Utilities
project_urls = 
    Bug Tracker = https://github.com/ericaltendorf/plotman/issues
    Changelog = https://github.com/ericaltendorf/plotman/blob/main/CHANGELOG.md

[options]
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    appdirs
    click
    desert
    marshmallow
    pendulum
    psutil ~= 5.8
    pyyaml
    texttable

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    plotman = plotman.plotman:main

[options.extras_require]
chia =
    chia-blockchain >= 1.0.4
dev =
    %(test)s
    isort
test = 
    check-manifest
    pytest
    pytest-mock
    pyfakefs

[options.data_files]
config = src/plotman/resources/plotman.yaml
bin = util/listlogs

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
line_length=88
