[metadata]
name = plotman
version = file: VERSION
author = Eric Altendorf
home-page = https://github.com/ericaltendorf/plotman
description = Chia plotting manager
long-description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license-file = LICENSE
python_requires = >=3.7
keywords = chia, blockchain, automation, process management
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Utilities
project_urls = 
    Bug Tracker = https://github.com/ericaltendorf/plotman/issues
    Changelog = https://github.com/ericaltendorf/plotman/blob/main/CHANGELOG.md

[options]
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    appdirs ~= 1.4
    attrs == 21.2
    click ~= 7.1
    desert == 2020.11.18
    marshmallow ~= 3.12
    packaging ~= 21.0
    pendulum ~= 2.1
    psutil ~= 5.8
    pyyaml ~= 5.4
    texttable ~= 1.6
    typing-extensions ~= 4.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    plotman = plotman.plotman:main

[options.extras_require]
coverage =
    coverage
    diff-cover
dev =
    %(test)s
    isort
test =
    %(coverage)s
    # TODO: figure out the pyfakes incompatibility with pytest 7
    pytest ~= 6.0
    pytest-cov
    pyfakefs
checks =
    black == 21.7b0
    check-manifest ~= 0.46
    mypy == 0.902
    types-pkg_resources ~= 0.1.2
    %(test)s

[options.data_files]
config = src/plotman/resources/plotman.yaml
bin = util/listlogs

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
line_length=88
